--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
         </div>
     </section> -->
 
-
     <section class="home" id="home" style="background-image: url(assect/img/home.jpg)">
         <div class="home-content-main">
             <div class="home-content-inner">
@@ -162,7 +161,79 @@
     </section>
 
     <section class="projects" id="projects">
+        <div class="projects-main">
+            <div class="project1">
+                <div class="project-show">
+                    <div class="project-head">
+                        <h1>Watch<span>.</span></h1>
+                    </div>
+                    <div class="project-des">
+                        <p>
+                            Bring saw gathering kind evening them air him void morning
+                            dominion spirit multiply seas shall day were likeness. Upon tree
+                            a gathering.
+                        </p>
+                    </div>
+                    <div class="project-link">
+                        <a href="projects.html">SEE PROJECT</a>
+                    </div>
+                </div>
+                <div class="project-nav">
+                    <button class="btn p-btn1"></button>
+                    <button class="btn p-btn2"></button>
+                    <button class="btn p-btn3"></button>
+                </div>
+            </div>
+            <div class="project2">
+                <div class="project-show">
+                    <div class="project-head">
+                        <h1>The Bottle<span>.</span></h1>
+                    </div>
+                    <div class="project-des">
+                        <p>
+                            Working with client and community, we deliver masterplans that
+                            create vibrant new place and spaces, attract people, and
+                            encourage investment through.
+                        </p>
+                    </div>
 
+                    <div class="project-link">
+                        <a href="projects.html">SEE PROJECT</a>
+                    </div>
+                </div>
+
+                <div class="project-nav">
+                    <input type="radio">
+                    <!-- <input type="radio" class="btn p-btn1"></input>
+                    <input type="radio" class="btn p-btn2"></input>
+                    <input type="radio" class="btn p-btn3"></input> -->
+                </div>
+            </div>
+            <div class="project3">
+                <div class="project-show">
+                    <div class="project-head">
+                        <h1>Aesop<span>.</span></h1>
+                    </div>
+                    <div class="project-des">
+                        <p>
+                            Third dry hath saying our over fruit Place reeping creepeth let
+                            Good. Created also darkness which open appear cattle Second
+                            shall brought wherein given. Moveth.
+                        </p>
+                    </div>
+
+                    <div class="project-link">
+                        <a href="projects.html">SEE PROJECT</a>
+                    </div>
+                </div>
+
+                <div class="project-nav">
+                    <button class="btn p-btn1"></button>
+                    <button class="btn p-btn2"></button>
+                    <button class="btn p-btn3"></button>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="education" id="education"></section>
@@ -183,16 +254,14 @@
 
             <div class="tm-carousel">
                 <div class="tm-carousel-inner">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, veritatis tenetur molestias
-                    possimus eveniet ad repellat inventore necessitatibus ab nesciunt laborum facilis libero ullam quia
-                    earum in praesentium dicta! Unde.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate,
+                    veritatis tenetur molestias possimus eveniet ad repellat inventore
+                    necessitatibus ab nesciunt laborum facilis libero ullam quia earum
+                    in praesentium dicta! Unde.
                 </div>
             </div>
-
         </div>
     </section>
-
-
 
     <section class="partners" id="partners">
         <div class="partners-main">
@@ -306,6 +375,9 @@
             <!-- </div> -->
         </div>
     </section>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
 </body>
 
 </html>
