set responsive projects page

--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
             <div class="project-banner-inner">
                 <div class="banner-content">
                     <div class="banner-head">
-                        <h1>The Bottle <span>.</span></h1>
+                        <h1>The Bottle<span>.</span></h1>
                     </div>
                 </div>
 
@@ -58,17 +58,17 @@
                     <div class="bi-design">
                         <h4>DESIGN</h4>
                         <p>Jonny Laymore</p>
-                    </div>
+                    </div><br>
 
                     <div class="bi-services">
                         <h4>SERVICES</h4>
                         <p>Branding, UI/UX Design, Mobile Design</p>
-                    </div>
+                    </div><br>
 
                     <div class="bi-date">
                         <h4>DATE</h4>
                         <p>Feburary 25th, 2020</p>
-                    </div>
+                    </div><br>
 
                     <div class="bi-team">
                         <h4>TEAM</h4>
