--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <!-- fafa cdn - start -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <!-- fafa cdn - end -->
+
+    <!-- bootstrap - star -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <!-- bootstrap - end -->
 </head>
 
 <body>
@@ -376,8 +380,9 @@
         </div>
     </section>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+    <!-- bootstrap - start  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- bootstrap - end -->
 </body>
 
 </html>
