--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
     <!-- fafa cdn - start -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <!-- fafa cdn - end -->
-
-    <!-- bootstrap - star -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <!-- bootstrap - end -->
 </head>
 
 <body>
@@ -307,25 +303,47 @@
 
             <div class="blog-con-main">
                 <div class="blog-card blog-1" style="background-image: url(assect/img/blog-1.jpg)">
-                    <span class="blog-date"></span>
-                    <span class="blog-head"></span>
-                    <p class="blog-con"></p>
+                    <span class="blog-date">December 27, 2020</span> <br>
+                    <a href="" class="blog-head">Scent in the Voyages</a>
+                    <div class="blog-con">
+                        <p>
+                            Let years seasons given two fowl above is itself shall third night female seasons you’re
+                            whales,
+                            unto had fowl Herb.
+                            Moving so. Said be fruitful first lights creeping deep void, lesser.
+                        </p>
+                    </div>
                     <span class="blog-readMore">Read more
                         <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                     </span>
                 </div>
                 <div class="blog-card blog-2" style="background-image: url(assect/img/blog-2.jpg)">
-                    <span class="blog-date"></span>
-                    <span class="blog-head"></span>
-                    <p class="blog-con"></p>
+                    <span class="blog-date">December 27, 2020</span><br>
+                    <a href="" class="blog-head">The Stone of the Flames</a>
+                    <div class="blog-con">
+                        <p>
+                            Let years seasons given two fowl above is itself shall third night female seasons you’re
+                            whales,
+                            unto had fowl Herb.
+                            Moving so. Said be fruitful first lights creeping deep void, lesser.
+                        </p>
+                    </div>
+
                     <span class="blog-readMore">Read more
                         <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                     </span>
                 </div>
                 <div class="blog-card blog-3" style="background-image: url(assect/img/blog-3.jpg)">
-                    <span class="blog-date"></span>
-                    <span class="blog-head"></span>
-                    <p class="blog-con"></p>
+                    <span class="blog-date">December 27, 2020</span><br>
+                    <a href="" class="blog-head">Secrets of the Serpents</a>
+                    <div class="blog-con">
+                        <p>
+                            Let years seasons given two fowl above is itself shall third night female seasons you’re
+                            whales,
+                            unto had fowl Herb.
+                            Moving so. Said be fruitful first lights creeping deep void, lesser.
+                        </p>
+                    </div>
                     <span class="blog-readMore">Read more
                         <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
                     </span>
@@ -380,9 +398,7 @@
         </div>
     </section>
 
-    <!-- bootstrap - start  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- bootstrap - end -->
+
 </body>
 
 </html>
