--- a/blog.html
+++ b/blog.html
@@ -14,36 +14,78 @@
 </head>
 
 <body>
-    <header>
-        <div class="base">
-            <div class="logo">
-                <img src="assect/img/logo.svg" alt="" />
+<header>
+    <div class="base">
+        <div class="logo">
+            <img src="assect/img/logo.svg" alt="" />
+        </div>
+        <nav class="head-nav">
+            <a href="#home">HOME</a>
+            <a href="#about">ABOUT</a>
+            <a href="#projects">PROJECTS</a>
+            <a href="#education">EDUCATION</a>
+            <a href="#testimonials">TESTIMONIALS</a>
+            <a href="#partners">PARTNERS</a>
+            <a href="#blog">BLOG</a>
+            <a href="#contact">CONTACT</a>
+        </nav>
+        <div class="num">+7(212)674-25-10</div>
+        <div class="res-nav-icon"><img class="res-nav-icon" src="assect/img/logo/nav - 3.png" alt=""></div>
+        <div class="social">
+            <div class="icon">
+                <i class="fa fa-facebook" aria-hidden="true"></i> <br />
+                <i class="fa fa-twitter" aria-hidden="true"></i> <br />
+                <i class="fa fa-instagram" aria-hidden="true"></i> <br />
             </div>
-            <nav class="head-nav">
-                <a href="#home">HOME</a>
-                <a href="#about">ABOUT</a>
-                <a href="#projects">PROJECTS</a>
-                <a href="#education">EDUCATION</a>
-                <a href="#testimonials">TESTIMONIALS</a>
-                <a href="#partners">PARTNERS</a>
-                <a href="#blog">BLOG</a>
-                <a href="#contact">CONTACT</a>
-            </nav>
-            <div class="num">+7(212)674-25-10</div>
-            <div class="social">
-                <div class="icon">
+            <div class="copyRight-main">
+                <div class="copyRight">
+                    <p>©&nbsp;Gilber.&nbsp;2020</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+
+
+<section class="res-nav">
+    <div class="res-nav-inner">
+        <div class="rn-language">
+            <div class="lng">
+                <a href="">ENG</a>
+                <a href="">FRA</a>
+                <a href="">GER</a>
+            </div>
+            <div class="cancel">
+                <img src="assect/img/logo/close.png" alt="">
+            </div>
+        </div>
+        <div class="rs-menu">
+            <ul>
+                <li><a class="cancel" href="#home">Home</a></li>
+                <li><a class="cancel" href="#about">About</a></li>
+                <li><a class="cancel" href="#projects">Projects</a></li>
+                <li><a class="cancel" href="#education">Education</a></li>
+                <li><a class="cancel" href="#testimonials">Testimonials</a></li>
+                <li><a class="cancel" href="#partners">Partners</a></li>
+                <li><a class="cancel" href="#blog">Blog</a></li>
+                <li><a class="cancel" href="#contact">Contact</a></li>
+            </ul>
+        </div>
+        <div class="rs-link">
+            <div class="rs-link-inner">
+                <div class="rsl-social">
                     <i class="fa fa-facebook" aria-hidden="true"></i> <br />
                     <i class="fa fa-twitter" aria-hidden="true"></i> <br />
                     <i class="fa fa-instagram" aria-hidden="true"></i> <br />
                 </div>
-                <div class="copyRight-main">
-                    <div class="copyRight">
-                        <p>©&nbsp;Gilber.&nbsp;2020</p>
-                    </div>
+                <div class="rsl-copyright">
+                    <p>© 2020 COPYRIGHT. <br>
+                        ALL RIGHTS RESERVED.</p>
                 </div>
             </div>
         </div>
-    </header>
+    </div>
+</section>
 
     <section class="blog-banner" style="background-image: url(assect/img/bp1.jpg)">
         <div class="blog-banner-con">
