--- a/index.html
+++ b/index.html
@@ -177,81 +177,104 @@
 
         <section class="projects scroll-effect" id="projects">
             <div class="projects-main">
-                <div class="project1">
-                    <div class="project-show">
-                        <div class="project-head">
-                            <h1>Watch<span>.</span></h1>
-                        </div>
-                        <div class="project-des">
-                            <p>
-                                Bring saw gathering kind evening them air him void morning
-                                dominion spirit multiply seas shall day were likeness. Upon tree
-                                a gathering.
-                            </p>
-                        </div>
-                        <div class="project-link">
-                            <a href="projects.html">SEE PROJECT</a>
+                <div class="project-main-in">
+                    <div class="project1 project-card">
+                        <div class="project-show">
+                            <div class="project-head">
+                                <h1>Watch<span>.</span></h1>
+                            </div>
+                            <div class="project-des">
+                                <p>
+                                    Bring saw gathering kind evening them air him void morning
+                                    dominion spirit multiply seas shall day were likeness. Upon tree
+                                    a gathering.
+                                </p>
+                            </div>
+                            <div class="project-link">
+                                <a href="projects.html">SEE PROJECT</a>
+                            </div>
+                            <div class="project-nav">
+                                <input type="radio" name="slide" id="slide1" class="btn p-btn1" checked>
+                                <input type="radio" name="slide" id="slide1" class="btn p-btn3">
+                                <input type="radio" name="slide" id="slide1" class="btn p-btn2">
+                            </div>
                         </div>
                     </div>
-                    <div class="project-nav">
-                        <button class="btn p-btn1"></button>
-                        <button class="btn p-btn2"></button>
-                        <button class="btn p-btn3"></button>
+                    <div class="project2 project-card">
+                        <div class="project-show">
+                            <div class="project-head">
+                                <h1>The Bottle<span>.</span></h1>
+                            </div>
+                            <div class="project-des">
+                                <p>
+                                    Working with client and community, we deliver masterplans that
+                                    create vibrant new place and spaces, attract people, and
+                                    encourage investment through.
+                                </p>
+                            </div>
+
+                            <div class="project-link">
+                                <a href="projects.html">SEE PROJECT</a>
+                            </div>
+                            <div class="project-nav">
+                                <input type="radio" name="slide" id="slide1" class="btn p-btn1" checked>
+                                <input type="radio" name="slide" id="slide1" class="btn p-btn3">
+                                <input type="radio" name="slide" id="slide1" class="btn p-btn2">
+                            </div>
+                        </div>
+
+
                     </div>
+                    <div class="project3 project-card">
+                        <div class="project-show">
+                            <div class="project-head">
+                                <h1>Aesop<span>.</span></h1>
+                            </div>
+                            <div class="project-des">
+                                <p>
+                                    Third dry hath saying our over fruit Place reeping creepeth let
+                                    Good. Created also darkness which open appear cattle Second
+                                    shall brought wherein given. Moveth.
+                                </p>
+                            </div>
+
+                            <div class="project-link">
+                                <a href="projects.html">SEE PROJECT</a>
+                            </div>
+                            <div class="project-nav">
+                                <input type="radio" name="slide" id="slide1" class="btn p-btn1" checked>
+                                <input type="radio" name="slide" id="slide1" class="btn p-btn3">
+                                <input type="radio" name="slide" id="slide1" class="btn p-btn2">
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
-                <div class="project2">
-                    <div class="project-show">
-                        <div class="project-head">
-                            <h1>The Bottle<span>.</span></h1>
-                        </div>
-                        <div class="project-des">
-                            <p>
-                                Working with client and community, we deliver masterplans that
-                                create vibrant new place and spaces, attract people, and
-                                encourage investment through.
-                            </p>
-                        </div>
-
-                        <div class="project-link">
-                            <a href="projects.html">SEE PROJECT</a>
-                        </div>
-                    </div>
-
-                    <div class="project-nav">
-                        <input type="radio">
-                        <!-- <input type="radio" class="btn p-btn1"></input>
-                    <input type="radio" class="btn p-btn2"></input>
-                    <input type="radio" class="btn p-btn3"></input> -->
-                    </div>
-                </div>
-                <div class="project3">
-                    <div class="project-show">
-                        <div class="project-head">
-                            <h1>Aesop<span>.</span></h1>
-                        </div>
-                        <div class="project-des">
-                            <p>
-                                Third dry hath saying our over fruit Place reeping creepeth let
-                                Good. Created also darkness which open appear cattle Second
-                                shall brought wherein given. Moveth.
-                            </p>
-                        </div>
-
-                        <div class="project-link">
-                            <a href="projects.html">SEE PROJECT</a>
-                        </div>
-                    </div>
-
-                    <div class="project-nav">
-                        <button class="btn p-btn1"></button>
-                        <button class="btn p-btn2"></button>
-                        <button class="btn p-btn3"></button>
-                    </div>
-                </div>
+                <div class="pro-btn pro-btn-l"><i class="fa fa-angle-left" aria-hidden="true"></i></div>
+                <div class="pro-btn pro-btn-r"><i class="fa fa-angle-right" aria-hidden="true"></i></div>
             </div>
         </section>
 
-        <section class="education scroll-effect" id="education"></section>
+        <section class="education scroll-effect" id="education">
+            <div class="education-main">
+                <div class="behance">
+                    <div class="edu-logo"></div>
+                    <div class="edu-head"></div>
+                    <div class="edu-con"></div>
+                </div>
+                <div class="envato">
+                    <div class="edu-logo"></div>
+                    <div class="edu-head"></div>
+                    <div class="edu-con"></div>
+                </div>
+                <div class="twiter">
+                    <div class="edu-logo"></div>
+                    <div class="edu-head"></div>
+                    <div class="edu-con"></div>
+                </div>
+            </div>
+
+        </section>
 
         <section class="testimonials scroll-effect" id="testimonials">
             <div class="tm-main">
