--- a/index.html
+++ b/index.html
@@ -377,9 +377,9 @@
                             </p>
                         </div>
                         <div class="blog-readMore">
-                            <span>Read more
+                            <a href="blog.html"> Read more
                                 <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                            </span>
+                            </a>
                         </div>
                     </div>
                     <div class="blog-card blog-2" style="background-image: url(assect/img/blog-2.jpg)">
@@ -395,9 +395,11 @@
                         </div>
 
                         <div class="blog-readMore">
-                            <span>Read more
-                                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                            </span>
+                            <div class="blog-readMore">
+                                <a href="blog.html"> Read more
+                                    <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                     <div class="blog-card blog-3" style="background-image: url(assect/img/blog-3.jpg)">
@@ -412,9 +414,11 @@
                             </p>
                         </div>
                         <div class="blog-readMore">
-                            <span>Read more
-                                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                            </span>
+                            <div class="blog-readMore">
+                                <a href="blog.html"> Read more
+                                    <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
