--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 <nav class="head-nav">
                     <a href="#home">HOME</a>
                     <a href="#about">ABOUT</a>
-                    <a href="#projects">PROJECTS</a>
+                    <a href="projects.html">PROJECTS</a>
                     <a href="#education">EDUCATION</a>
                     <a href="#testimonials">TESTIMONIALS</a>
                     <a href="#partners">PARTNERS</a>
-                    <a href="#blog">BLOG</a>
+                    <a href="blog.html">BLOG</a>
                     <a href="#contact">CONTACT</a>
                 </nav>
                 <div class="num">+7(212)674-25-10</div>
@@ -189,6 +189,7 @@
                                     dominion spirit multiply seas shall day were likeness. Upon tree
                                     a gathering.
                                 </p>
+                                <!-- <a href="projects.html">check</a> -->
                             </div>
                             <div class="project-link">
                                 <a href="projects.html">SEE PROJECT</a>
@@ -212,7 +213,6 @@
                                     encourage investment through.
                                 </p>
                             </div>
-
                             <div class="project-link">
                                 <a href="projects.html">SEE PROJECT</a>
                             </div>
@@ -255,7 +255,7 @@
             </div>
         </section>
 
-        <section class="education scroll-effect" id="education">
+        <!-- <section class="education scroll-effect" id="education">
             <div class="education-main">
                 <div class="behance">
                     <div class="edu-logo"></div>
@@ -274,7 +274,7 @@
                 </div>
             </div>
 
-        </section>
+        </section> -->
 
         <section class="testimonials scroll-effect" id="testimonials">
             <div class="tm-main">
