--- a/projects.html
+++ b/projects.html
@@ -20,13 +20,13 @@
                 <img src="assect/img/logo.svg" alt="" />
             </div>
             <nav class="head-nav">
-                <a href="#home">HOME</a>
+                <a href="index.html">HOME</a>
                 <a href="#about">ABOUT</a>
-                <a href="#projects">PROJECTS</a>
+                <a href="projects.html">PROJECTS</a>
                 <a href="#education">EDUCATION</a>
                 <a href="#testimonials">TESTIMONIALS</a>
                 <a href="#partners">PARTNERS</a>
-                <a href="#blog">BLOG</a>
+                <a href="blog.html">BLOG</a>
                 <a href="#contact">CONTACT</a>
             </nav>
             <div class="num">+7(212)674-25-10</div>
