project carousel set

--- a/blog.html
+++ b/blog.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog</title>
+    <title>blog 2 </title>
     <!-- <link rel="stylesheet" href="assect/css/style.css" /> -->
-    <link rel="stylesheet" href="assect/css/blog.css">
+    <link rel="stylesheet" href="assect/css/blog.css" />
 
     <!-- fafa cdn - start -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -14,13 +14,14 @@
 </head>
 
 <body>
+
     <header>
         <div class="base">
             <div class="logo">
                 <img src="assect/img/logo.svg" alt="" />
             </div>
             <nav class="head-nav">
-                <a href="index.html">HOME</a>
+                <a href="#home">HOME</a>
                 <a href="#about">ABOUT</a>
                 <a href="projects.html">PROJECTS</a>
                 <a href="#education">EDUCATION</a>
@@ -86,6 +87,7 @@
             </div>
         </div>
     </section>
+
 
     <section class="blog-banner" style="background-image: url(assect/img/bp1.jpg)">
         <div class="blog-banner-con">
@@ -251,6 +253,19 @@
             </div>
         </div>
     </section>
+
+
+
+
+
+
+
+
+
+
+    <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="assect/js/main.js"></script>
 </body>
 
 </html>
