--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
                 <img src="assect/img/logo.svg" alt="" />
             </div>
             <nav class="head-nav">
-                <a href="index.html">HOME</a>
+                <a href="#home">HOME</a>
                 <a href="#about">ABOUT</a>
                 <a href="projects.html">PROJECTS</a>
                 <a href="#education">EDUCATION</a>
@@ -45,8 +45,8 @@
             </div>
         </div>
     </header>
-    
-    
+
+
     <section class="res-nav">
         <div class="res-nav-inner">
             <div class="rn-language">
@@ -86,6 +86,7 @@
             </div>
         </div>
     </section>
+
 
 
     <section class="project-banner" style="background-image: url('assect/img/bottle.jpg')">
@@ -192,6 +193,12 @@
 
         </div>
     </section>
+
+
+
+    <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="assect/js/main.js"></script>
 </body>
 
 </html>
