--- a/projects.html
+++ b/projects.html
@@ -90,35 +90,36 @@
 
 
     <section class="project-banner" style="background-image: url('assect/img/bottle.jpg')">
+        <div>
+
+        </div>
         <div class="project-banner-main">
-            <div class="project-banner-inner">
-                <div class="banner-content">
-                    <div class="banner-head">
-                        <h1>The Bottle<span>.</span></h1>
-                    </div>
+            <div class="banner-content">
+                <div class="banner-head">
+                    <h4>The Bottle<span>.</span></h4>
                 </div>
+            </div>
 
-                <div class="banner-info">
-                    <div class="bi-design">
-                        <h4>DESIGN</h4>
-                        <p>Jonny Laymore</p>
-                    </div><br>
+            <div class="banner-info">
+                <div class="bi-design">
+                    <h4>DESIGN</h4>
+                    <p>Jonny Laymore</p>
+                </div><br>
 
-                    <div class="bi-services">
-                        <h4>SERVICES</h4>
-                        <p>Branding, UI/UX Design, Mobile Design</p>
-                    </div><br>
+                <div class="bi-services">
+                    <h4>SERVICES</h4>
+                    <p>Branding, UI/UX Design, Mobile Design</p>
+                </div><br>
 
-                    <div class="bi-date">
-                        <h4>DATE</h4>
-                        <p>Feburary 25th, 2020</p>
-                    </div><br>
+                <div class="bi-date">
+                    <h4>DATE</h4>
+                    <p>Feburary 25th, 2020</p>
+                </div><br>
 
-                    <div class="bi-team">
-                        <h4>TEAM</h4>
-                        <p>Paul - Designer</p>
-                        <p>VLThemes - Coder</p>
-                    </div>
+                <div class="bi-team">
+                    <h4>TEAM</h4>
+                    <p>Paul - Designer</p>
+                    <p>VLThemes - Coder</p>
                 </div>
             </div>
         </div>
