--- a/projects.html
+++ b/projects.html
@@ -196,10 +196,17 @@
     </section>
 
 
+    <!-- gsap cdn - start -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <!-- gsap cdn - end -->
+
+
 
     <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="assect/js/main.js"></script>
+    <script src="assect/js/gsap.js"></script>
 </body>
 
 </html>
